# sfml_games

./: CMakeLists.txt  Game.cpp  Game.h  Geometry.cpp  Geometry.h  ReadMe.md  main.cpp  my_first_game.kdev4  sfml_game
.kdev4/: my_first_game.kdev4
